[package]
name = "asn1rs"
version = "0.2.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2018"
description = "ASN.1 to Rust, Protobuf and SQL compiler/code generator. Supports ASN.1 UPER"
keywords = ["asn1", "uper", "protobuf", "sql", "compiler"]
categories = ["encoding", "parsing"]
repository = "https://github.com/kellerkindt/asn1rs"
license = "MIT/Apache-2.0"
readme = "README.md"

#[workspace]
#members = [
#    "asn1rs-macros",
#    "asn1rs-model"
#]

[lib]
name = "asn1rs"
path = "src/lib.rs"

[[bin]]
name = "asn1rs"
path = "src/main.rs"
required-features = ["model"]


[dependencies]
backtrace = "0.3.9"
clap = "2.32.0"
codegen = "0.1.1"
byteorder = "1.2.4"
serde = "1.0.115"
serde_derive = "1.0.115"

# feature postgres
postgres = { version = "0.17.5", optional = true }

# feature async-psql
tokio = { version = "0.3.0", optional = true, features = ["macros"]  }
tokio-postgres = { version = "0.5.5", optional = true }
futures = { version = "0.3.4", optional = true }
bytes = { version = "0.5.4", optional = true }

# feature asn1rs-*
asn1rs-model =  { version = "0.2.0", path = "asn1rs-model", optional = true }
asn1rs-macros = { version = "0.2.0", path = "asn1rs-macros", optional = true }

[dev-dependencies]
syn = {version = "1.0.28", features = ["full"] }
quote = "1.0.3"
proc-macro2 = "1.0.10"


[features]
default = ["macros", "model"]
psql = ["asn1rs-model/psql", "postgres", "bytes"]
async-psql = ["asn1rs-model/async-psql", "tokio", "tokio-postgres", "futures", "bytes"]
protobuf = ["asn1rs-model/protobuf"]
macros = ["asn1rs-macros"]
model = ["asn1rs-model"]
legacy_bit_buffer = []
legacy-uper-codegen = ["asn1rs-model/legacy-uper-codegen"]
legacy-protobuf-codegen = ["asn1rs-model/legacy-protobuf-codegen"]
debug-proc-macro = ["asn1rs-macros/debug-proc-macro", "asn1rs-model/debug-proc-macro"]

[[bench]]
name = "bitbuffer"
path = "benches/bitbuffer.rs"
required-features = ["legacy_bit_buffer"]

[package.metadata.docs.rs]
all-features = true
