[package]
name = "asn1rs"
version = "0.4.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2021"
description = "ASN.1 to Rust compiler with Protobuf code generator. Supports ASN.1 UPER"
keywords = ["asn1", "uper", "protobuf", "compiler"]
categories = ["encoding", "parsing"]
repository = "https://github.com/kellerkindt/asn1rs"
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace]
members = [
    "asn1rs-macros",
    "asn1rs-model"
]

[lib]
name = "asn1rs"
path = "src/lib.rs"

[[bin]]
name = "asn1rs"
path = "src/main.rs"
required-features = ["model", "clap"]


[dependencies]
backtrace = "0.3.69"
byteorder = "1.5.0"

# feature asn1rs-*
asn1rs-model =  { version = "0.4.0", path = "asn1rs-model", optional = true }
asn1rs-macros = { version = "0.4.0", path = "asn1rs-macros", optional = true }

# for binary only
clap = { version = "4.4.18", features = ["derive", "env"], optional = true }

[dev-dependencies]
syn = { version = "2.0.48", features = ["full", "visit", "extra-traits"] }
quote = "1.0.3"
proc-macro2 = "1.0.10"
codegen = "0.2.0"

[features]
default = ["macros", "model", "clap"]
protobuf = ["asn1rs-model/protobuf"]
macros = ["asn1rs-macros"]
model = ["asn1rs-model"]
debug-proc-macro = ["asn1rs-macros/debug-proc-macro", "asn1rs-model/debug-proc-macro"]
descriptive-deserialize-errors = []

[package.metadata.docs.rs]
all-features = true
