[package]
name = "asn1rs-macros"
version = "0.1.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2018"
description = "Macros for asn1rs"
keywords = ["proc", "macro", "asn1", "protobuf", "sql"]
categories = ["parsing", "parser"]
repository = "https://github.com/kellerkindt/asn1rs-proc"
license = "MIT/Apache-2.0"
readme = "README.md"


[lib]
proc-macro = true


[dependencies]
syn = {version = "1.0.17", features = ["full"] }
quote = "1.0.3"
proc-macro2 = "1.0.10"


[dependencies.asn1rs-model]
path = "../asn1rs-model"
