[package]
name = "asn1rs-macros"
version = "0.2.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2018"
description = "Macros for asn1rs"
keywords = ["proc", "macro", "asn1", "protobuf", "sql"]
categories = ["parsing"]
repository = "https://github.com/kellerkindt/asn1rs-proc"
license = "MIT/Apache-2.0"
readme = "README.md"


[lib]
proc-macro = true

[features]
default = []
debug-proc-macro = []


[dependencies]
asn1rs-model =  { version = "0.2.0", path = "../asn1rs-model" }
syn = {version = "1.0.17", features = ["full"] }
quote = "1.0.3"

[dev-dependencies]
runtime-macros = "0.3.0"
old-proc-macro2 = { package = "proc-macro2", version = "0.4" }
old-syn = { package = "syn", version = "0.15", default-features = false, features = ["parsing", "printing", "full"] }