[package]
name = "asn1rs-model"
version = "0.2.2"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2018"
description = "Rust, Protobuf and SQL model definitions for asn1rs"
keywords = ["asn1", "protobuf", "sql", "model"]
categories = ["parsing"]
repository = "https://github.com/kellerkindt/asn1rs"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
backtrace = "0.3.9"
codegen = "0.1.3"
syn = {version = "1.0.109", features = ["full", "extra-traits"] }
quote = "1.0.3"
proc-macro2 = "1.0.10"
strum = "0.19.2"
strum_macros = "0.19.2"

[features]
default = []
# RustCodeGenerator -> GeneratorSupplement
psql = []
async-psql = []
protobuf = []
debug-proc-macro = []
generate-internal-docs = []
