[package]
name = "asn1rs-model"
version = "0.4.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2018"
description = "Rust and Protobuf model definitions for asn1rs"
keywords = ["asn1", "protobuf", "model"]
categories = ["parsing"]
repository = "https://github.com/kellerkindt/asn1rs"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
backtrace = "0.3.69"
codegen = "0.1.3"
syn = {version = "1.0.109", features = ["full", "extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.76"
strum = "0.19.5"
strum_macros = "0.19.4"

[features]
default = []
protobuf = []
debug-proc-macro = []
generate-internal-docs = []
